--- a/emailTemplates/registration.html
+++ b/emailTemplates/registration.html
@@ -6,7 +6,7 @@
     account</p>
 
     <div style="font-family:Verdana,Arial,Helvetica,sans-serif;color:#333333;font-size:xx-small">
-      Visit <a href="http://www.adventurecycling.org" target="">http://www.adventurecycling.org</a> for more information about Adventure Cycling.
+      Visit <a href="www.adventurecycling.org" target="">http://www.adventurecycling.org</a> for more information about Adventure Cycling.
     </div>
   </body>
 </html>
