--- a/staticPages/thankyou.html
+++ b/staticPages/thankyou.html
@@ -2,21 +2,42 @@
   <head>
     <style>
       body {
-        max-width: 700px;
+        max-width: 600px;
         margin: 2em auto;
         background: white;
-        padding: 2em;
+        padding-top: 2em;
         border-radius: 5px;
         box-shadow: 0px 0px 10px lightgray;
         border: 1px solid #d5d5d5;
+        text-align: center;
+        font-weight: bold;
+        font-family: sans-serif;
       }
       html {
         background: #f5f5f5;
+      }
+      div {
+        padding: 0.5em;
       }
     </style>
   </head>
   <body>
     <h1> Thank you for making your account! </h1>
     <p>You are all set to use The Bicycle Digital Touring Companion!<p/>
+      <img src="./Blue_Ridge_DennisCoello.jpg" width="90%"></img>
+    <p>If you aren't already, consider becoming an adventure cycling member
+      <a href="https://www.adventurecycling.org/membership/join/">here</a></p>
+    <div>
+      <a href="http://twitter.com/advcyclingassoc"><img src="twitter.jpg"></a>
+      <a href="http://twitter.com/advcyclingassoc"><img src="facebook.jpg"></a>
+      <a href="http://twitter.com/advcyclingassoc"><img src="youtube.jpg"></a>
+      <a href="http://twitter.com/advcyclingassoc"><img src="pintrest.jpg"></a>
+      <a href="http://twitter.com/advcyclingassoc"><img src="instagram.jpg"></a>
+    </div>
+    <div>
+      <a href="http://www.adventurecycling.org/" ><img src="logo.gif"></a>
+    </div>
+
+
   </body>
 </html>
