updated urls, and pointed to correct paths

--- a/staticPages/thankyou.html
+++ b/staticPages/thankyou.html
@@ -24,18 +24,18 @@
   <body>
     <h1> Thank you for making your account! </h1>
     <p>You are all set to use The Bicycle Digital Touring Companion!<p/>
-      <img src="./Blue_Ridge_DennisCoello.jpg" width="90%"></img>
+      <img src="/Blue_Ridge_DennisCoello.jpg" width="90%"></img>
     <p>If you aren't already, consider becoming an adventure cycling member
       <a href="https://www.adventurecycling.org/membership/join/">here</a></p>
     <div>
-      <a href="http://twitter.com/advcyclingassoc"><img src="twitter.jpg"></a>
-      <a href="http://twitter.com/advcyclingassoc"><img src="facebook.jpg"></a>
-      <a href="http://twitter.com/advcyclingassoc"><img src="youtube.jpg"></a>
-      <a href="http://twitter.com/advcyclingassoc"><img src="pintrest.jpg"></a>
-      <a href="http://twitter.com/advcyclingassoc"><img src="instagram.jpg"></a>
+      <a href="http://twitter.com/advcyclingassoc"><img src="/twitter.jpg"></a>
+      <a href="https://www.facebook.com/adventurecycling/"><img src="/facebook.jpg"></a>
+      <a href="http://youtube.com/advcyclingassoc"><img src="/youtube.jpg"></a>
+      <a href="https://www.pinterest.com/advcyclingassoc/"><img src="/pintrest.jpg"></a>
+      <a href="https://instagram.com/adventurecycling/"><img src="/instagram.jpg"></a>
     </div>
     <div>
-      <a href="http://www.adventurecycling.org/" ><img src="logo.gif"></a>
+      <a href="http://www.adventurecycling.org/" ><img src="/logo.gif"></a>
     </div>
 
 
