update email and thankyou page to have same verbage and style

--- a/staticPages/thankyou.html
+++ b/staticPages/thankyou.html
@@ -23,10 +23,10 @@
   </head>
   <body>
     <h1> Thank you for making your account! </h1>
-    <p>You are all set to use The Bicycle Digital Touring Companion!<p/>
+    <p>You are all set to use The Bicycle Touring Companion!<p/>
       <img src="/Blue_Ridge_DennisCoello.jpg" width="90%"></img>
-    <p>If you aren't already, consider becoming an adventure cycling member
-      <a href="https://www.adventurecycling.org/membership/join/">here</a></p>
+    <p>If you aren't already, consider becoming an Adventure Cycling member
+      <a href="https://www.adventurecycling.org/membership/join/">here</a>.</p>
     <div>
       <a href="http://twitter.com/advcyclingassoc"><img src="/twitter.jpg"></a>
       <a href="https://www.facebook.com/adventurecycling/"><img src="/facebook.jpg"></a>
